--- a/project_management/todo.txt
+++ b/project_management/todo.txt
@@ -1,11 +1,11 @@
-Placement Height
+(X) Placement Height
 Lockable objects (Locks selection)
 Anchored objects (Disables physics simulation). `RigidBody::Static`
 Mouse drag tool should align object with global Y-axis
 Separate Gizmo Transformation Tools
-Flick tool
+(X) Flick tool
 Joints
-Uploadable Objects
+Uploadable 3d Objects
 Flip Table (with revertable state)
 
 Multi-selection
