--- a/project_management/todo.txt
+++ b/project_management/todo.txt
@@ -6,6 +6,8 @@ Separate Gizmo Transformation Tools
 (X) Flick tool
 Joints
 Uploadable 3d Objects
+Returnable Objects (If fall off table, come back to table)
+Save Scenes
 Flip Table (with revertable state)
 
 Multi-selection
